Feature/77 unit test storage manager (#78)
* Unit test Storage Manager Grundgerüst

* unit test for StorageManager

* unit test for StorageManager

* unit test for StorageManager remove files after test

* minor changes to confirm upload/download

Co-authored-by: SandroGuerotto <s.guerotto@gmail.com>